--- a/index.html
+++ b/index.html
@@ -177,22 +177,22 @@
         const projects = [
             {
                 name: "Medication Tracker",
-                url: "#", // Add your project's actual link here
+                url: "https://faisalali555.github.io/Medication-Tracker-Web-App/", // Add your project's actual link here
                 description: "A web app to track your daily medications and schedules."
             },
             {
                 name: "Grocery Web App",
-                url: "#", // Add your project's actual link here
+                url: "https://faisalali555.github.io/Grocery-Web-App/", // Add your project's actual link here
                 description: "Manage your grocery lists smartly and efficiently."
             },
             {
                 name: "Glow Notes",
-                url: "#", // Add your project's actual link here
+                url: "https://faisalali555.github.io/Glow-Notes/", // Add your project's actual link here
                 description: "A simple and elegant note-taking app with a glow effect."
             },
             {
                 name: "The Aurora Calculators",
-                url: "#", // Add your project's actual link here
+                url: "https://faisalali555.github.io/The-Aurora-Calculators/", // Add your project's actual link here
                 description: "A collection of beautifully designed calculators for various needs."
             },
             {
