--- a/index.html
+++ b/index.html
@@ -199,8 +199,13 @@
                 name: "Digital Matrix Countdown",
                 url: "https://faisalali555.github.io/Digital-Matrix-Countdown/", // Add your project's actual link here
                 description: "A countdown timer with a cool, digital rain effect."
-            }
-            // To add a new project, add a line like this:
+            },
+            {
+                name: "World Clock Live Time",
+                url: "https://faisalali555.github.io/World-Clock/", // Add your project's actual link here
+                description: "A world clock with a cool, 3d neon effect."
+	        }
+	        // To add a new project, add a line like this:
             // , { name: "New Project", url: "link-here.html", description: "Details about this project." }
         ];
 
